# maturin-mwe

./: pyproject.toml
