[project]
name = "example"
version = "0.0.0"
description = ""
authors = [
    {email = "cnpryer@gmail.com"},
    {name = "Chris Pryer"}
]
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
]

[tool.maturin]
bindings = "bin"

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"
